initial deployable code

--- a/app/btp-cap-samples-ui5-app/webapp/i18n/i18n.properties
+++ b/app/btp-cap-samples-ui5-app/webapp/i18n/i18n.properties
@@ -3,9 +3,9 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Basic UI5 application in CAP
+appTitle=basic ui5 application in CAP
 
 #YDES: Application description
-appDescription=Basic UI5 application in CAP
+appDescription=basic ui5 application in CAP
 #XTIT: Main view title
-title=Basic UI5 application in CAP
+title=basic ui5 application in CAP
